--- a/estilo.css
+++ b/estilo.css
@@ -29,7 +29,7 @@ html{
 .contenedor-header header .logo a{
     font-family: 'Righteous';
     font-size: 36px;
-    color: #1CB698;
+    color: rgb(154, 52, 201);
     text-decoration: none;
 }
 .contenedor-header header ul{
@@ -38,18 +38,18 @@ html{
 }
 .contenedor-header header nav ul li a{
     text-align: none;
-    color: #fff;
+    color: #ffffff;
     margin: 0 15px;
     padding: 3px;
     transition: .5s;
     text-decoration: none;
 }
 .contenedor-header header nav ul li a:hover{
-    color: #1CB698;
+    color: rgb(154, 52, 201);
 }
 .nav-responsive{
     background-color: #1CB698;
-    color:#fff;
+    color:#ffffff;
     padding: 5px 10px;
     border-radius: 5px;
     cursor: pointer;
@@ -61,7 +61,7 @@ html{
     url(https://i.pinimg.com/564x/56/76/5f/56765fd8f4d40b2550b4ad70de14f41f.jpg);
     background-size: cover;
     height: 100vh;
-    color: #fff;
+    color: #ffffff;
     display: flex;
     align-items: center;
 }
@@ -75,7 +75,7 @@ html{
 }
 .inicio .contenido-banner img{
     margin-top: 40px;
-    border: 10px solid #1CB698;
+    border: 10px solid rgb(154, 52, 201);
     display: block;
     width: 80%;
     margin: auto;
@@ -91,10 +91,10 @@ html{
     font-weight: normal;
 }
 .inicio .contenido-banner .redes a{
-    color: #fff;
+    color: #ffffff;
     display: inline-block;
     text-decoration: none;
-    border: 1px solid #fff;
+    border: 1px solid #ffffff;
     border-radius: 100%;
     width: 42px;
     height: 42px;
@@ -104,11 +104,11 @@ html{
     transition: .3s;
 }
 .inicio .contenido-banner .redes a:hover{
-    background-color: #1CB698;
+    background-color: rgb(154, 52, 201);
 }
 .sobremi{
     background-color: #1e2326;
-    color: #fff;
+    color: #ffffff;
     padding: 50px 20px;
 }
 .sobremi .contenido-seccion{
@@ -128,7 +128,7 @@ html{
     margin-bottom: 20px;
 }
 .sobremi .contenido-seccion p span{
-    color: #1CB698;
+    color: rgb(154, 52, 201);
     font-weight: bold;
 }
 .sobremi .fila{
@@ -151,11 +151,11 @@ html{
 }
 .sobremi .fila .col ul li strong{
     display: inline-block;
-    color: #1CB698;
+    color: rgb(154, 52, 201);
     width: 130px;
 }
 .sobremi .fila .col ul li span{
-    background-color: #1CB698;
+    background-color: rgb(154, 52, 201);
     padding: 3px;
     font-weight: bold;
     border-radius: 5px;
@@ -176,42 +176,76 @@ html{
     justify-content: center;
     transition: .3s;
 }.sobremi .fila .col .contenedor-intereses .interes:hover{
-    background-color: #1CB698;
+    background-color: rgb(154, 52, 201);   
+
 }
 .sobremi .fila .col .contenedor-intereses .interes i{
     font-size: 30px;
     margin-bottom: 10px;
 }
-.sobremi button{
-    cursor: pointer;
-    background-color: transparent;
-    border: 2px solid #fff;
-    width: fit-content;
-    display: block;
-    margin: 20px auto;
-    padding: 10px 22px;
-    font-size: 16px;
-    color: #fff;
-    position: relative;
-    z-index: 10;
+
+.boton{
+    text-align: center;
+    margin-top: 50px;
+    padding-bottom: 50px;
+    }
+    main button{
+        background-image:linear-gradient(rgb(206, 201, 201), rgb(154, 52, 201), rgb(185, 182, 182)) ;
+        text-align: center;
+        color: rgb(0, 0, 0);
+       padding: 5px;
+        cursor:pointer;
+       transition: .3s;
+        border-radius: 10px;
+    }
+    
+    main button span
+    {
+    
+       
+   
+    padding: 10px 10px 10px;
+    border-radius:6px;
+    transition: .3s;
+    }
+    main button:hover span
+    {
+    background:none;
+    }
+    main button:active 
+    {
+        transform: scale(0.9);
+    }
+
+.educacion {
+    font-family: 'Righteous';
+    font-size: 100%;
+    color: #ffffff;
+    margin-left: 10%;
 }
-.sobremi button .overlay{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 0;
-    height: 100%;
-    background-color: #1CB698;
-    z-index: -1;
-    transition: 1s;
+
+
+.redes-sociales a {
+    display: inline-block;
+    text-decoration: none;
+    width: 80px;
+    height: 70px;
+    line-height: 45px;
+   color: #ffffff;
+  text-align: center;
+   text-align: center;
+  transition: all 200ms ease;
 }
-.sobremi button:hover .overlay{
-    width: 100%;
+
+
+.redes-sociales a p{
+color: #ffffff;
+font-family: 'Righteous';
 }
 /* SECCION CURRICULUM */
 .curriculum{
     background-color: #1e2326;
-    color: #fff;
+    color: #ffffff;
     padding: 50px 20px;
 }
 .curriculum .contenido-seccion{
@@ -255,30 +289,30 @@ html{
     margin-bottom: 10px;
 }
 .curriculum .fila .item .casa{
-    color: #1CB698;
+    color: rgb(154, 52, 201);
     font-size: 22px;
     font-weight: bold;
     display: block;
 }
 .curriculum .fila .item .fecha{
     display: block;
-    color: #1CB698;
+    color: rgb(154, 52, 201);
     margin-bottom: 10px;
 }
 .curriculum .fila .item p{
     line-height: 24px;
 }
 .curriculum .fila .izq{
-    border-right: 2px solid #1CB698;
+    border-right: 2px solid rgb(154, 52, 201);
     margin-right: 20px;
 }
 .curriculum .fila .der{
-    border-left: 2px solid #1CB698;
+    border-left: 2px solid rgb(154, 52, 201);
     margin-left: 20px;
 }
 .curriculum .fila .item .conectori{
     height: 2px;
-    background-color: #1CB698;
+    background-color: rgb(154, 52, 201);
     width: 47px;
     position: absolute;
     top: 50%;
@@ -290,14 +324,14 @@ html{
     height: 10px;
     width: 10px;
     border-radius: 50%;
-    background-color: #1CB698;
+    background-color: rgb(154, 52, 201);
     float: right;
     position: relative;
     bottom: 4px;
 }
 .curriculum .fila .item .conectord{
     height: 2px;
-    background-color: #1CB698;
+    background-color: rgb(154, 52, 201);
     width: 47px;
     position: absolute;
     top: 50%;
@@ -309,7 +343,7 @@ html{
     height: 10px;
     width: 10px;
     border-radius: 50%;
-    background-color: #1CB698;
+    background-color: rgb(154, 52, 201);
     float: left;
     position: relative;
     bottom: 4px;
@@ -318,7 +352,7 @@ html{
 .contacto{
     background-image: url(img/contact_bg.png);
     background-color: #1e2326;
-    color: #fff;
+    color: #ffffff;
     padding: 50px 0;
 }
 .contacto .contenido-seccion{
@@ -352,13 +386,13 @@ html{
 .contacto button{
     cursor: pointer;
     background-color: transparent;
-    border: 2px solid #fff;
+    border: 2px solid #ffffff;
     width: fit-content;
     display: block;
     margin: 20px auto;
     padding: 10px 22px;
     font-size: 16px;
-    color: #fff;
+    color: rgb(255, 255, 255);
     position: relative;
     z-index: 10;
 }
@@ -368,7 +402,7 @@ html{
     left: 0;
     width: 0;
     height: 100%;
-    background-color: #1CB698;
+    background-color: rgb(154, 52, 201);
     z-index: -1;
     transition: 1s;
 }
@@ -394,7 +428,7 @@ html{
     margin-bottom: 20px;
 }
 .contacto .col .info ul li i{
-    color: #1CB698;
+    color: rgb(154, 52, 201);
     display: inline-block;
     margin-right: 20px;
 }
@@ -413,7 +447,7 @@ footer .redes a{
     color: #fff;
     display: inline-block;
     text-decoration: none;
-    border: 1px solid #fff;
+    border: 1px solid #ffffff;
     border-radius: 100%;
     width: 42px;
     height: 42px;
@@ -426,7 +460,7 @@ footer .arriba{
     display: block;
     width: 50px;
     height: 50px;
-    background-color: #1CB698;
+    background-color: rgb(154, 52, 201);
     color: #fff;
     position: absolute;
     left: 50%;
@@ -456,7 +490,7 @@ footer .arriba{
         display: block !important;
     }
     nav.responsive ul li{
-        border-bottom: 1px solid #fff;
+        border-bottom: 1px solid #ffffff;
         padding: 10px 0;
     }
 }
@@ -502,6 +536,6 @@ footer .arriba{
         display: block;
     }
     .contacto .fila .col{
-        width: 100%;
+        width: 50%;
     }
 }
